--- a/pages/nf4514/n12523578.md
+++ b/pages/nf4514/n12523578.md
@@ -52,6 +52,34 @@
  </strong>
 </p>
 <p>
+ 22：30
+</p>
+<p>
+ 一些州的计票工作仍在缓慢进行中。有媒体宣布，民主党参议员加里·彼得斯（Gary Peters）赢得连任，并称密歇根州目前已统计出98%的选票，两人的得票率分别为49.7%和48.4%。
+</p>
+<p>
+ 然而，詹姆斯竞选团队周三指责当地选举官员行为不当，压制选民和干扰选举。
+</p>
+<p>
+ 这些指控发生在底特律市中心TCF中心的一个计票室，那里收集了所有邮寄的缺席选票。到周三，官员们禁止人们进入房间，并将白色硬纸板放在窗户上，以遮挡公众的视线。
+</p>
+<blockquote class="twitter-tweet">
+ <p dir="ltr" lang="en">
+  The scene at Detroit’s absentee ballot counting center is growing more heated. The windows now being covered up. Allegations of violations. Sec. of State says she welcomes challenges.
+  <ok href="https://t.co/oUL4A0h3Ku">
+   pic.twitter.com/oUL4A0h3Ku
+  </ok>
+ </p>
+ <p>
+  — Matt Finn (@MattFinnFNC)
+  <ok href="https://twitter.com/MattFinnFNC/status/1324084637010976769?ref_src=twsrc%5Etfw">
+   November 4, 2020
+  </ok>
+ </p>
+</blockquote>
+<p>
+</p>
+<p>
  18：55
 </p>
 <p>
