--- a/pages/nf4514/n12518740.md
+++ b/pages/nf4514/n12518740.md
@@ -727,13 +727,13 @@
     BBC报导，由于大选结果没有最后出来，可能会有三种情况发生。
    </p>
    <p>
-    1.在接下来的几天，外界可能都难以知道最终结果。目前密歇根州、威斯康星州和宾夕法尼亚州等地还没有计算完邮寄票数。
+    1. 在接下来的几天，外界可能都难以知道最终结果。目前密歇根州、威斯康星州和宾夕法尼亚州等地还没有计算完邮寄票数。
    </p>
    <p>
-    2.川普总统说要由最高法院来判断选举结果，这意味着可能要花几周的时间，才有定论。
+    2. 川普总统说要由最高法院来判断选举结果，这意味着可能要花几周的时间，才有定论。
    </p>
    <p>
-    3.选举的不确定性可能带来动荡，有许多美国人谈到了他们的担忧。
+    3. 选举的不确定性可能带来动荡，有许多美国人谈到了他们的担忧。
    </p>
    <h3>
     3:08 众议院共和党人再增两个席位
@@ -778,7 +778,7 @@
     若川普拿下这四州，选举人票就超过270张。
    </p>
    <p>
-    纽约时报对三个关间摇摆州的开票情况做了更新：
+    纽约时报对三个关键摇摆州的开票情况做了更新：
    </p>
    <p>
     密歇根州开票56%：
