--- a/pages/nsc412/n12527098.md
+++ b/pages/nsc412/n12527098.md
@@ -80,11 +80,7 @@
  各地发生多起抗议 紧张局势延续到深夜
 </h3>
 <p>
- 美国总统大选选情僵持不下，几个关键摇摆州突然宣布推迟出炉结果，后来拜登的票
- <span class="s1">
-  数
- </span>
- 忽然又反超此前一直领先的川普。当夜有大批川普支持者包围摇摆州的点票中心，进行抗议。
+ 美国总统大选选情僵持不下，几个关键摇摆州突然宣布推迟出炉结果，后来拜登的票数忽然又反超此前一直领先的川普。当夜有大批川普支持者包围摇摆州的点票中心，进行抗议。
 </p>
 <p>
  在亚利桑那州，至少几百人包围点票中心，大叫口号要求“不要再盗窃选举”，并大骂福克斯新闻，认为其出卖了川普。密歇根州大批川普支持者到底特律一个点票中心，大叫停止点票。
@@ -95,6 +91,14 @@
 <p>
  目前在周三至周六之间，全国各地预计举行100多场抗议，一个名叫“保护选举结果”的联盟说，他们将密切关注选举的结果，必要时随时采取行动，该联盟由来自民主与共和两党的165个草根团体组成。
 </p>
+<figure class="wp-caption aligncenter" id="attachment_12527248" style="width: 600px">
+ <ok href="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229463657.jpg">
+  <img alt="" class="size-large wp-image-12527248" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229463657-600x416.jpg"/>
+ </ok>
+ <br/><figcaption class="wp-caption-text">
+  2020年11月4日，美国密歇根州底特律会议中心内进行计票程序，三位川普的支持者在TCF会议中心外举着标语。(SETH HERALD/AFP via Getty Images)
+ </figcaption><br/>
+</figure><br/>
 <h3>
  花血本撑拜登 彭博的一亿美元打水漂
 </h3>
@@ -112,6 +116,15 @@
 </p>
 <p>
  彭博本人的净资产超过540亿美元，在竞选总统的时候已经花了10亿美元，但以失败告终。
+</p>
+<h3>
+ 中共对美国大选表态 被讽“黄鼠狼拜年”
+</h3>
+<p>
+ 在美国选情激烈、难解难分之际，中共外交部副部长乐玉成在外交部吹风会议上就美国大选表示，希望大选能够平稳顺利地举行，所谓美方新一任总统和新一届政府“与中方共同相向而行，推动两国关系沿着正确的轨道向前发展。”
+</p>
+<p>
+ 这番话遭到网民的讥讽，有网民说，这是“黄鼠狼给鸡拜年的典型案例”，还有网民说，“我也要表态，我支持拜登参选中国总统”。还有网民说，这是中共“隐藏想法，藏而不露”。
 </p>
 <h3>
  川普诉宾州违反《帮助美国投票法》
