--- a/pages/p8/951554.md
+++ b/pages/p8/951554.md
@@ -1,4 +1,4 @@
-### “天知道”的医德(图)
+### “女主管”的表现胜过男性？这一点是关键(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,14 +6,14 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align:center">
-  <img alt="医德 医生 妇产科 手术" src="https://img3.secretchina.com/pic/2020/7-1/p2722732a393133271-ss.jpg" style="height:337px; width:600px"/>
+ <p style="text-align: center;">
+  <img alt="主管 女性 领导 团队" src="https://img3.secretchina.com/pic/2020/3-14/p2647962a461412471-ss.jpg"/>
   <br>
-   “天知道”的
+   “女
    <strong>
-    医德
+    主管
    </strong>
-   。（图片来源：Adobe stock)
+   ”的表现胜过男性？这一点是关键。（图片来源：Adobestock）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -25,53 +25,55 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  <strong>
-   “老天知道！”
-  </strong>
+  <span style="font-size:22px">
+   <strong>
+    <span href="https://www.secretchina.com/news/gb/tag/女性" target="_blank">
+     女性
+    </span>
+    领导人的能力比男性好？她们之所以能成为优秀的领导者，源于所经历的难关…
+   </strong>
+  </span>
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  一个
+  编按：根据《
+  <span href="https://www.google.com.tw/url?sa=t&amp;rct=j&amp;q=&amp;esrc=s&amp;source=web&amp;cd=&amp;cad=rja&amp;uact=8&amp;ved=2ahUKEwj4jPi5suvsAhXhLqYKHeqpAgkQmhMwEnoECAUQAg&amp;url=https%3A%2F%2Fzh.wikipedia.org%2Fzh-tw%2F%25E7%25A6%258F%25E5%25B8%2583%25E6%2596%25AF&amp;usg=AOvVaw2BOvcLKQmTRjouuS0pA8e0">
+   富比世
+  </span>
+  》杂志4月份的报导，标题写下“防疫有成的国家，都是由女性所引导”，这些领导人被称为领导的典范，不同于多数的男性领导人，在危机处理上，利用有效的策略，让人见证她们的能力。究竟是哪些具体方式，使她们能驱动追随者的行动？其实女性优秀的领导力，源于她们更难成为领导人？
+ </p>
+ <p>
+  以下为《为什么我们总是选到不适任的男性当
+  <span href="https://www.secretchina.com/news/gb/tag/领导" target="_blank">
+   领导
+  </span>
+  人？》作者汤玛斯・查莫洛—普雷谬齐克精辟的解析：
+ </p>
+ <p>
+  有可靠的证据显示，在所有领导人之中，女性的表现普遍胜过男性。最值得注意的是，在一篇检阅45份领导力与性别研究的报告当中，西北大学（NorthwesternUniversity）爱丽丝．艾格利（AliceEagly）教授和同事发现，比起男性，女性更能在
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/医生" target="_blank">
-    医生
+   <span href="https://www.secretchina.com/news/gb/tag/团队" target="_blank">
+    团队
    </span>
   </strong>
-  在一家大医院的
-  <strong>
-   妇产科
-  </strong>
-  工作，有一天快下班了，来了一位病人，他检查之后说道：“你子宫里可能长了个东西，最好尽快动
-  <strong>
-   手术
-  </strong>
-  。”
+  或组织里驱动正向的改革，这特别要归功于女性能提出更有效的领导策略。
  </p>
  <p>
-  病人的脸一下苍白了，怪不得最近总是虚弱心慌。幸亏发现得早，应该不至于扩散。
+  具体来说，女性更能够受到追随者的敬重，而且她们沟通愿景时更有效率、更愿意授权与指导部属，并且以更有弹性与创意的方式解决问题。此外，女性领导人评估直属员工时也比较客观公平。反之，男性领导人比较少跟部属建立良好的关系，多半根据实际表现给予奖赏。他们也不太专注于培养其他人才，比较关心自己的升迁。
  </p>
  <p>
-  <span href="https://www.secretchina.com/news/gb/tag/手术" target="_blank">
-   手术
-  </span>
-  很快就安排了，对医生而言，已经有上千次手术的经验。这个肿瘤应该不大，只需一个小切口。打开病人的腹部，向子宫深处观察时，他惊住了，汗珠冒上额头。这是他行医数十年中，不曾遇到的失误。
- </p>
- <p>
-  子宫里不是肿瘤，是个胎儿。
- </p>
- <p>
-  他陷入矛盾，如果把胎儿拿掉，然后告诉病人摘除的是肿瘤，病人一定会感激万分，而且可以确定那所谓的肿瘤，一定不会复发。相反，是迅速缝合刀口，承认自己的失误。几秒钟的心理挣扎，他选择了后者。
+  尽管性别差异通常不大，但是这项研究的结论是：“在领导风格上，所有女性超越男性的特质都与领导的成效呈现正向的关联性；但是，所有男性胜过女性的特质，却都与领导的成效呈现负相关或是无关。”男性与女性微小但显著的领导力差异，全都指向同一个方向：女性与其他人表现不同的地方，通常是她们表现得比较好的地方；男性与其他人表现不同的地方，通常是他们表现得比较差的地方。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -86,7 +88,7 @@
   </div>
  </center>
  <p>
-  回到办公室，等待病人苏醒后，医生来到病人床前。他严肃的神情，让病人和旁边的亲属们手脚冰凉，等待癌症末期的宣判。
+  当然，这些发现或许反映出研究人员所称的抽样偏误（samplingbias），因为女性要争取领导机会，必须比男性更有资格才行。许多研究都指出，女性领导人比男性更称职，或许单纯反映出女性要成为领导人，面对的挑战比男性更严峻罢了。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -101,7 +103,7 @@
   </div>
  </center>
  <p>
-  医生说：“对不起，是我搞错了，你只是怀孕，没有长肿瘤。”
+  这样的研究多半被拿来举证，说明我们对女性领导人的标准高到不公平。但是，我会把这个主张反过来：不是我们对女性领导人的标准太高，而是对男性领导人的标准不够高。既然我们都希望由更好的人才来带领组织，选择女性时，我们不该降低标准，但选择男性时，我们应该要提高标准。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -116,7 +118,7 @@
   </div>
  </center>
  <p>
-  他深深地道歉：“孩子安好，一定能生下一个可爱的小宝宝。”
+  例如，研究显示，在相同条件下，女性获得面试的机率低于男性，而且只要一个简单的实验就会产生这种明显的结果。有一位斯基德莫尔学院（SkidmoreCollege）的研究人员寄出许多份相同的履历，只是把名字改成珍妮佛或是约翰。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -131,37 +133,7 @@
   </div>
  </center>
  <p>
-  病人和亲属全呆住了，隔了十几秒钟，病人的丈夫突然冲过去，抓住医生的领子，吼道：“你这个庸医，我要告你！”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  后来，孩子安全产下，发育很正常。但是秦医生无法得到家属的谅解，最后落得被取消行医执照，只能到一家私人公司当普通职员。他昔日的朋友很同情他，问他为什么不将错就错，就说是个畸形死胎，又有谁知道。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  医生淡淡一笑：“老天知道！”
+  不过，尽管履历上名字以外的其他方面条件都一样，但是约翰收到的开价条件，年薪比珍妮佛多了大约4000美元以上，显然，约翰看起来比珍妮佛更有才干。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -180,41 +152,11 @@
   </ins>
  </center>
  <p>
-  现实中，人们用真名说假话；网络上，人们用假名说真话。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  讲真话，做好人，有时候是一件很辛苦的事，你必须承受得起同步而来的憋屈、窝囊和痛苦；但你会活得踏实心安、理直气壮、从容自在。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  医生的
-  <span href="https://www.secretchina.com/news/gb/tag/医德" target="_blank">
-   医德
+  也因为这样的偏见，女性要达到相同的领导位阶，花费的时间比男性漫长。举例来说，有一项
+  <span href="https://www.google.com.tw/url?sa=t&amp;rct=j&amp;q=&amp;esrc=s&amp;source=web&amp;cd=&amp;cad=rja&amp;uact=8&amp;ved=2ahUKEwidgZ3OsuvsAhWFGqYKHVOFAbgQmhMwG3oECA0QAg&amp;url=https%3A%2F%2Fzh.wikipedia.org%2Fzh-tw%2F%25E8%25B4%25A2%25E5%25AF%258C_(%25E6%259D%2582%25E5%25BF%2597)&amp;usg=AOvVaw02o9QsKUBhdgxaWECRKlGo">
+   财星
   </span>
-  令人敬佩，他们什么都可以舍弃，但不舍弃内心的真诚；什么都可以输掉，但不输自己的良心。
+  1000大企业执行长的分析显示，那些极少的少数（只有6%）女性执行长，比起男性执行长多花了30%的时间才登上高位。这也同时说明为什么女性执行长在这些公司里，她们的平均年龄比同职位的男性多了4岁。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -229,7 +171,45 @@
   </div>
  </center>
  <p>
-  讲真话，做好人，做好事！正如医生淡淡一笑：“老天知道！”
+  然后，矛盾的是，我们根本不用问：“如果女性能成为这么棒的领导人，为什么没有更多女性领导人呢？”因为答案必然是，女性能成为这么棒的领导人，是因为她们更难成为领导人。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  我要说明的论点是，阻止适任的女性担任领导人、导致不适任的男性升上高位的原因，不光是性别偏见。根本的原因在于，实际的领导天赋和我们对领导力的假想彻底脱节。“会获选”为领导人的人格特质与行为，跟“能够有效领导”的必备技能，是完全不一样的两个世界。
+  <br>
+  </br>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <strong>
+   本文整理、节录自汤玛斯・查莫洛—普雷谬齐克《
+   <span href="https://bookzone.cwgv.com.tw/books/details/BCB716">
+    为什么我们总是选到不适任的男性当领导人？
+   </span>
+   》一书，文章仅代表作者个人立场和观点。由天下文化授权转载，欲阅读完整作品，欢迎参考原书。
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -261,7 +241,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -293,13 +273,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/938259.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/938259.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/938259.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/05/938259.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/951554.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/951554.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/951554.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/05/951554.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p8/938259.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p8/951554.md' width='0px' height='0px'/>
