--- a/pages/nf4514/n12527098.md
+++ b/pages/nf4514/n12527098.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【大选更新11·5】胜负难分 美多处爆发抗议" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229466940-600x400.jpg"/>
+<div><img alt="【大选更新11.5】川普在内华达州提诉" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1228652753-600x400.jpg"/>
 <div class="caption">
- 11月4日，支持川普总统的选民聚集在凤凰城计票中心外抗议。(Courtney Pedroza/Getty Images)
+ 周四，国家情报局前代理局长里克·格里内尔（Ric Grenell）将在拉斯维加斯举行新闻发布会，宣布川普竞选团队正在该州提起诉讼，图为·格里内尔。(ANDREJ ISAKOVIC/AFP via Getty Images)
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
