同步于: 11月6日2时2分

--- a/pages/soh6/439639.md
+++ b/pages/soh6/439639.md
@@ -58,6 +58,24 @@
  <p>
   下面11月5日（周四）选情后续更新报导：
  </p>
+ <p>
+  1：00pm：
+ </p>
+ <p>
+  ----彭博社驻白宫记者温格罗夫（Josh Wingrove）转发了来自
+  <ok href="/term/1041">
+   川普
+  </ok>
+  总统的一则全大写声明。声明说：“如果您在合理计票，那么我将轻松胜选。如果您在非法计票和延迟计票，他们将从我们的手中窃取大选。”
+ </p>
+ <div class="soh-embed">
+  <div class="soh-embed-inner">
+   <div class="iframely-embed" style="max-width: 550px;">
+    <div class="iframely-responsive" style="padding-bottom: 79.0264%;">
+    </div>
+   </div>
+  </div>
+ </div>
  <h3>
   12：30pm：
  </h3>
@@ -66,11 +84,15 @@
   <ok href="/term/1041">
    川普
   </ok>
-  总统发推文表示，“我们将对所有最近的
+  总统发推文表示，“我们将对所有最近
   <ok href="/term/3365">
    拜登
   </ok>
-  声称获胜的州进行‘选民欺诈’和‘州选举欺诈’的法律质疑。（我们有）大量证据-只需查看媒体即可知道。我们会赢！美国第一！”
+  声称获胜的州进行‘选民欺诈’和‘州选举欺诈’的法律质疑。（我们有）大量证据-只需查看媒体即可知道。我们会赢！美国第一！”从11月4日凌晨起，推特开始封杀
+  <ok href="/term/1041">
+   川普
+  </ok>
+  总统有关大选的推文。这条也被封杀了。
  </p>
  <div class="soh-embed">
   <div class="soh-embed-inner">
@@ -91,6 +113,14 @@
   </ok>
   总统发推说：“在宾州取得了法律上的巨大胜利！”
  </p>
+ <div class="soh-embed">
+  <div class="soh-embed-inner">
+   <div class="iframely-embed" style="max-width: 550px;">
+    <div class="iframely-responsive">
+    </div>
+   </div>
+  </div>
+ </div>
  <h3>
   10：30am：
  </h3>
