--- a/pages/soh6/439639.md
+++ b/pages/soh6/439639.md
@@ -59,6 +59,27 @@
   下面11月5日（周四）选情后续更新报导：
  </p>
  <h3>
+  7：00pm：
+ </h3>
+ <p>
+  ----因多个摇摆州爆出大选舞弊和欺诈事实或录像，
+  <ok href="/term/1041">
+   川普
+  </ok>
+  竞选团队建立了选举违规举报热线 (888) 630-1776及网站
+  <ok href="http://djt45.co/stopfraud?fbclid=IwAR28BsvCU2wZ3TYAu2VZAynKpd-0u8aXGvOzJiRlG8VtTRptrI2NSxwHHkA">
+   djt45.co/stopfraud
+  </ok>
+  ，征集更多民意监督和举报，维护美国真实、公正的民意选举和法律秩序。
+ </p>
+ <p>
+  ----
+  <ok href="/term/1041">
+   川普
+  </ok>
+  儿子艾瑞克（Eric Trump）发推文表示，他收到数量惊人的举报，其中最重磅的是：进在内华达州一个州，就发现超过223,000份邮寄选票寄错了地址。
+ </p>
+ <h3>
   3：00pm：
  </h3>
  <p>
