--- a/pages/nsc412/n12529890.md
+++ b/pages/nsc412/n12529890.md
@@ -45,8 +45,24 @@
 <p>
  川普在推特上发文，宣布将在所有拜登最近宣称胜选的州发起法律诉讼，全面挑战选举舞弊。川普团队已经开通了一条电话热线，并将很快再推出一个网站，供民众举报与选举有关的欺诈和权力滥用行为。
 </p>
+<h4>
+ 以下是
+ <ok href="https://www.epochtimes.com/gb/tag/%E7%BE%8E%E5%9B%BD%E5%A4%A7%E9%80%89.html">
+  美国大选
+ </ok>
+ 日各州投票情况的实时更新：
+</h4>
 <h3>
- 格雷厄姆：费城的计票像蛇一样狡诈
+ 川普团队诉讼被两州法院驳回
+</h3>
+<p>
+ 川普团队请求，如果没有共和党的监票人员在场，费城需要暂停计票，但是遭到联邦法官拒绝。联邦地方法官戴蒙（Paul Diamond）裁定：“有鉴于政党间的协议，原告的请求在不损及各方权利的前提下，被予以拒绝。”
+</p>
+<p>
+ 密歇根州法官史蒂文斯（Cynthia Stephens）亦以证据不足为由，驳回川普团队要求暂停点票工作的诉讼。
+</p>
+<h3>
+ 格雷厄姆捐50万助川普：费城计票像蛇一样狡诈
 </h3>
 <figure class="wp-caption aligncenter" id="attachment_10944099" style="width: 600px">
  <ok href="https://i.epochtimes.com/assets/uploads/2018/12/GettyImages-1085006712-e1546255179551.jpg">
