--- a/pages/soh6/440023.md
+++ b/pages/soh6/440023.md
@@ -41,7 +41,34 @@
  </p>
  <p>
   <strong>
-   11：30am
+   4:00pm
+  </strong>
+ </p>
+ <h3>
+  宾州法官下令：将一些临时选票分出来
+ </h3>
+ <p>
+  宾夕法尼亚州一位州法官已下令，要计票点将临时选票挑出来，并且忽略那些不合规的缺席选票。目前尚不知道宾州有多少张临时选票可能会被筛选出去。该法官还表示，他稍后可能还会颁布其它有关选举方面的命令。
+ </p>
+ <h3>
+  密州软件错误：数十个县都将共和党选票错误算给民主党
+ </h3>
+ <p>
+  密歇根州共和党下午举行新闻发布会，透露该州数十个县都出现软件故障，错误地将投给共和党的选票计算给了民主党。目前已经知道的有一个县的6,000张选票被错误计算，而该软件在密州数十个县中广泛使用。
+ </p>
+ <div class="AD_Embed__Wrap-sc-1xslmin-0 igMuqX module desktop">
+  <div>
+  </div>
+ </div>
+ <p>
+  密州共和党主席考克斯（Laura Cox）说：“在安特里姆县（Antrim County），投给共和党人的选票却被计给了民主党人，导致有6,000张选票变成反对我们的了。”该县书记员表示，这是因为制表软件出了故障造成的计算错误。但可怕的是，他还说：“我们现在发现，有47个县使用了相同的软件。”
+ </p>
+ <p>
+  今天稍早，共和党全国委员会（RNC）主席麦克丹尼尔（Ronna McDaniel）已经表示密州存在严重的投票违规行为。她还谴责该州民主党人拒绝对选举程序保持透明度。
+ </p>
+ <p>
+  <strong>
+   11:30am
   </strong>
  </p>
  <h3>
@@ -95,10 +122,6 @@
   </ok>
   总统最终将在那里获胜。”
  </p>
- <div class="AD_Embed__Wrap-sc-1xslmin-0 igMuqX module desktop">
-  <div>
-  </div>
- </div>
  <p>
   他还谈到了宾州、内华达州和亚利桑那州的选情都存在的问题。他说，宾州存在许多违规行为，选举官员至今仍在阻止监票员进入点票地点；内华达州有成千上万人不正当地通过邮寄投票。
  </p>
@@ -111,7 +134,7 @@
  </p>
  <p>
   <strong>
-   8：00am：
+   8:00am：
   </strong>
  </p>
  <h3>
@@ -163,6 +186,10 @@
   </ok>
   总统。
  </p>
+ <div class="AD_Embed__Wrap-sc-1xslmin-0 igMuqX module desktop">
+  <div>
+  </div>
+ </div>
  <p>
   麦卡锡表示，
   <ok href="/term/1041">
