同步于: 11月7日7时2分

--- a/pages/soh6/440023.md
+++ b/pages/soh6/440023.md
@@ -41,6 +41,111 @@
  </p>
  <p>
   <strong>
+   6:00pm
+  </strong>
+ </p>
+ <h3>
+  关键战场州最新战况
+ </h3>
+ <p>
+  1、宾夕法尼亚州：拜登领先
+  <ok href="/term/1041">
+   川普
+  </ok>
+  0.2个百分点，比
+  <ok href="/term/1041">
+   川普
+  </ok>
+  的得票数多出14,541张。
+  <ok href="/term/1041">
+   川普
+  </ok>
+  团队已对该州涉嫌选举舞弊提出诉讼。
+ </p>
+ <div class="AD_Embed__Wrap-sc-1xslmin-0 igMuqX module desktop">
+  <div>
+  </div>
+ </div>
+ <p>
+  2、北卡罗莱纳州：
+  <ok href="/term/1041">
+   川普
+  </ok>
+  领先拜登1.4个百分点，比拜登的得票数多出76,673张。
+ </p>
+ <p>
+  3、乔治亚州：拜登领先
+  <ok href="/term/1041">
+   川普
+  </ok>
+  0.1个百分点，比
+  <ok href="/term/1041">
+   川普
+  </ok>
+  的得票数多出4,235张。该州将重新点票。
+ </p>
+ <p>
+  4、内华达州：拜登领先
+  <ok href="/term/1041">
+   川普
+  </ok>
+  1.6个百分点，比
+  <ok href="/term/1041">
+   川普
+  </ok>
+  的得票数多出20,137张。
+  <ok href="/term/1041">
+   川普
+  </ok>
+  团队已对该州涉嫌选举欺诈提出诉讼。
+ </p>
+ <p>
+  5、亚利桑那州：拜登领先
+  <ok href="/term/1041">
+   川普
+  </ok>
+  1.1个百分点，比
+  <ok href="/term/1041">
+   川普
+  </ok>
+  的得票数多出39,400张。
+  <ok href="/term/1041">
+   川普
+  </ok>
+  团队已对该州涉嫌选举舞弊提出诉讼。
+ </p>
+ <p>
+  6、威斯康辛州：拜登领先
+  <ok href="/term/1041">
+   川普
+  </ok>
+  0.7个百分点，比
+  <ok href="/term/1041">
+   川普
+  </ok>
+  的得票数多出20,540张。
+  <ok href="/term/1041">
+   川普
+  </ok>
+  团队要求该州重新点票。
+ </p>
+ <p>
+  7、密歇根州：拜登领先
+  <ok href="/term/1041">
+   川普
+  </ok>
+  2.7个百分点，比
+  <ok href="/term/1041">
+   川普
+  </ok>
+  的得票数多出146,123张。
+  <ok href="/term/1041">
+   川普
+  </ok>
+  团队已对该州涉嫌选举舞弊提出诉讼。
+ </p>
+ <p>
+  <strong>
    4:00pm
   </strong>
  </p>
@@ -56,10 +161,6 @@
  <p>
   密歇根州共和党下午举行新闻发布会，透露该州数十个县都出现软件故障，错误地将投给共和党的选票计算给了民主党。目前已经知道的有一个县的6,000张选票被错误计算，而该软件在密州数十个县中广泛使用。
  </p>
- <div class="AD_Embed__Wrap-sc-1xslmin-0 igMuqX module desktop">
-  <div>
-  </div>
- </div>
  <p>
   密州共和党主席考克斯（Laura Cox）说：“在安特里姆县（Antrim County），投给共和党人的选票却被计给了民主党人，导致有6,000张选票变成反对我们的了。”该县书记员表示，这是因为制表软件出了故障造成的计算错误。但可怕的是，他还说：“我们现在发现，有47个县使用了相同的软件。”
  </p>
@@ -122,6 +223,10 @@
   </ok>
   总统最终将在那里获胜。”
  </p>
+ <div class="AD_Embed__Wrap-sc-1xslmin-0 igMuqX module desktop">
+  <div>
+  </div>
+ </div>
  <p>
   他还谈到了宾州、内华达州和亚利桑那州的选情都存在的问题。他说，宾州存在许多违规行为，选举官员至今仍在阻止监票员进入点票地点；内华达州有成千上万人不正当地通过邮寄投票。
  </p>
@@ -186,10 +291,6 @@
   </ok>
   总统。
  </p>
- <div class="AD_Embed__Wrap-sc-1xslmin-0 igMuqX module desktop">
-  <div>
-  </div>
- </div>
  <p>
   麦卡锡表示，
   <ok href="/term/1041">
