--- a/pages/p4/951720.md
+++ b/pages/p4/951720.md
@@ -1,4 +1,4 @@
-### 看 蔡霞词条百度和维基百科差别这么大(图)
+### 四千中国孤儿的“洋爸爸”(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align: center;">
-  <img alt="近日中央党校对蔡霞开除党籍、取消退休待遇。" src="https://img2.secretchina.com/pic/2019/6-27/p2455742a481332695-ss.jpg"/>
+ <p style="text-align:center">
+  <img alt="中国孤儿" src="https://img2.secretchina.com/pic/2019/10-18/p2542962a718126993-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   近日中央党校对蔡霞开除党籍、取消退休待遇。（图片来源：LEO RAMIREZ/AFP/Getty Images）
+   两个孤儿（图片来源：Pixabay）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,105 +21,52 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.51.119:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.51.119:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/)  &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html) &nbsp;|&nbsp; [网门免翻墙](http://158.247.203.241:11000/show.aspx?name=ogHome)
-
-#### 💥 [九评共产党](http://141.164.51.119:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.51.119:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.51.119:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.51.119:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  忧心中国会回到文革时期！前中国黑龙江省鸡西市副市长李传良，真名退出共产党](http://141.164.51.119:10000/videos/news/quit01.html)
-
-#### [ 🔥  走出文化亡国第十集 伪专家和造新闻 － 中共宣传机器愚弄民众的两个“致命暗器”](http://141.164.51.119:10000/videos/news/../res/zcwhwg/index.html)
-
-#### [ 🔥  U-2是引中共開火的餌？習近平對美軍“準備好了”沒理解；蓬佩奧發暗示，或實力回應大批判](http://141.164.51.119:10000/videos/news/wenzhao01.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年8月27日讯】
-  <span href="https://www.secretchina.com/news/gb/tag/蔡霞" target="_blank">
-   蔡霞
-  </span>
-  因发表批评中共高层的言论８月１７号中央党校开除党籍、取消退休待遇，引起舆论轰动。
+  【看中国2020年11月7日讯】30年前，
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/贝天牧" target="_blank">
+    贝天牧
+   </span>
+  </strong>
+  把家从美国搬到中国，30年后，他成了4000个
+  <strong>
+   孤儿
+  </strong>
+  的“洋爸爸”，其中95%的孩子都是
+  <strong>
+   残障儿童
+  </strong>
+  。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  蔡霞到底是怎样一个人？她因为发表言论受到整治是怎样一个过程？
- </p>
- <p>
-  当我们带着这些问题，在百度百科和海外的维基百科搜索时，发现在不同的网络自由环境下，这两个网络百科全书对蔡霞的描述介绍天壤之别：一个是严重违纪的中央
-  <span href="https://www.secretchina.com/news/gb/tag/党校" target="_blank">
-   党校
-  </span>
-  退休教师，一个是获得多个奖项、敢言自由派知识分子。
- </p>
- <p>
-  今天的《网络博弈》节目就带您去具体看看百度百科和维基百科对蔡霞的介绍到底有哪些不同。
- </p>
- <p>
-  <strong>
-   百度百科：蔡霞严重违纪
-  </strong>
- </p>
- <p>
-  百度百科对蔡霞的解释非常短，没有刊登蔡霞的照片，只说她是博士学位，自1986年起，开始从事政党意识形态、执政党建设等研究, 曾任北京市党建研究会特邀研究员、教育部干部教育学院客座教授、中央驻香港联络办公室人事部客座教授。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  在人物事件方面，百度百科词条只提到一个，就是８月17日中央党校对蔡霞进行处分的事情。说是因蔡霞发表有严重政治问题和损害国家声誉的言论，性质极其恶劣、情节极其严重，中纪委和中央党校机关纪委审查后，决定对她进行处分。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  <strong>
-   维基百科披露蔡霞红二代背景
-  </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  维基百科2001年创立，因
+  2019年6月，南京一位患有脑瘫的8岁女童被父亲和爷爷推进河里，她背着的书包里还装着两块砖头。在村民口中，这孩子“养着不中用”，还不如扔掉。在当今功利主义的
   <span href="https://www.secretchina.com" target="_blank">
    中国
   </span>
-  政府封禁大陆民众无法直接浏览。
+  社会里，加上“一胎化”的影响，一些“有问题”，会“拖累”家庭，被认为“养着不中用”的孩子，不是落得被抛弃的下场，就是可能遭受“非正常死亡”的结果。
+ </p>
+ <p>
+  但在贝天牧眼里，这些孩子都是没被人发现的宝藏。
+ </p>
+ <p>
+  像十几年前，有个浑身严重烧伤的孩子被丢在天津郊区一片玉米地里。小雨淅沥，40多个村民撑着伞围了一圈，他们对着小孩议论纷纷，却没有一个人愿意上前抱起他。如果不是遇到那个好心的农民和贝天牧，这个孩子的生命也许就会终结在那天下午，消散在人们一声沉重的叹息里。
+ </p>
+ <p>
+  然后在长达6小时的手术中，医生截去了这孩子的左胳膊，左脚，还有他右脚的所有脚趾，右手的所有手指。而这个当初被医生断言只有不到10%概率可以活下来的孩子，如今已经是个16岁的大男孩了。他现在被一对美国夫妇收养，起名Levi，他成绩拔尖，足球踢得很棒，他会游泳，会攀岩，会滑水，会骑自行车，他还是校篮球队的一员……
+ </p>
+ <p>
+  照片里的Levi笑得和旁边的美国孩子没有任何不同，他的生命和他们一样精彩，他们的未来都有着无限的可能性。“如果那天Levi死去，那又是个什么样的故事呢？”贝天牧不敢想。但他心里明白，还有更多像Levi一样被遗弃的孩子，在等着他。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -134,7 +81,7 @@
   </div>
  </center>
  <p>
-  维基百科对蔡霞的词条解释不仅刊登了蔡霞接受美国之音视频采访的截图，还披露了百度没有提及的蔡霞的红二代家庭背景、与中共不同的政治观念、和她屡次遭到中央党校领导谈话警告的经过。
+  我们接下来的人生，都会在中国度过了
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -149,7 +96,7 @@
   </div>
  </center>
  <p>
-  由两位美国人创办的维基百科是全球最大的多语言网络百科全书，由非盈利组织运营，内容编辑著作自由开放，由全球各地的志愿者们合作编撰而成。
+  本在一家超市做副总经理的贝天牧，工资待遇优渥，有房有车，妻子可以全职在家照看两个可爱的女儿。但在三十而立的前夕，他给自己的人生来了个超大的转折。他放弃了美国的一切，举家搬迁到中国当一名英文老师。因为他希望他在有限的人生里能帮助更多的人。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -164,7 +111,7 @@
   </div>
  </center>
  <p>
-  旅美反共翻墙会创办人李鑫帮助大陆民众翻墙在海外网站自由浏览。他特别知道百度和维基百科的不同。
+  1988年，他带着全家来到了中国，成为抚顺一所学校里孩子们争相呼喊的“贝老师”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -179,11 +126,11 @@
   </div>
  </center>
  <p>
-  维基百科介绍显示，今年67岁的蔡霞来自中共早期老党员家庭，外祖父上世纪二十年代曾跟随中共早期领导人之一潘汉年在江苏和上海工作。蔡霞小时候在江苏常州部队大院长大。由于特殊家庭背景，文化大革命中她没有像其他知青一样上山下乡受苦，还作为红卫兵在天安门广场见到
-  <span href="https://www.secretchina.com/news/gb/tag/毛泽东" target="_blank">
-   毛泽东
+  在抚顺一年后，贝天牧和家人又搬到了北京，成了北京航空航天大学的一名英文老师。同时，他和妻子也成了当地
+  <span href="https://www.secretchina.com/news/gb/tag/孤儿" target="_blank">
+   孤儿
   </span>
-  。
+  院的志愿者。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -198,7 +145,7 @@
   </div>
  </center>
  <p>
-  蔡霞由于自己家庭条件、父母工作环境优越，认识到社会差距之大，关注底层普通百姓生活的困境。
+  第一天走进孤儿院的房间里，他们就被吓到了。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -213,137 +160,11 @@
   </div>
  </center>
  <p>
-  <strong>
-   曾给对百姓感情淡漠干部打低分
-  </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  维基百科词条解释称，蔡霞言说犀利直接，被视为中央党校的自由派学者。蔡霞强调尊重个人自由，倾向制约公权力。作为中央党校教授，蔡霞在培训干部时毫不掩盖出对那些不关心群众利益的官员的反感。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  2002年，蔡霞在对一些干部讲“三个代表”思想时，有干部说，农民就是刁民。蔡霞反问说，在座的哪个祖上不是农民？现在一些干部对老百姓的感情变了，称呼改变反映了感情的改变，党校老师在原则问题上坚决不能退让。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  2012年在党校培训时，一位即将晋升副部级的干部学员谈到天津蓟县大火引起网络舆论失控。蔡霞认为这位官员对老百姓感情淡漠，不把人命关天的火灾当回事，给他的成绩打了低分。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  <strong>
-   2011年被首次谈话
-  </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  维基百科词条记录蔡霞因为言论被谈话的四个事件。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  第一次是在2011年，中央党校首次和蔡霞谈话，要求她发表意见要注意场合、注意分寸。当时蔡霞在北京市一个街道进行党群共治教育培训，实验预算民主，请人讲解美国通行的罗伯特议事规则。由于在讨论中涉及未来中国政治体制改革，在海外引发关注，中央党校因为上级追查下来跟蔡霞谈话。2012年,蔡霞从中央党校退休。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  <strong>
-   声援任志强，遭党校恐吓
-  </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  第二次是在2016年，原北京华远集团负责人任志强因反对
-  <span href="https://www.secretchina.com/news/gb/tag/习近平" target="_blank">
-   习近平
+  一个房间里，密密麻麻放了30多张婴儿床。墙壁光秃秃，只在一角并排贴了几张儿童早教图。穿着背心长裤的
+  <span href="https://www.secretchina.com/news/gb/tag/残障儿童" target="_blank">
+   残障儿童
   </span>
-  党媒姓党观点，被留党察看一年处分。蔡霞发表文章，题为《党章党规保护任志强们的党员权利》，为捍卫言论自由发声，声援任志强，导致她被官方《光明日报》点名批评。《光明日报》文章说蔡霞有严重政治问题和立场问题。
+  们或躺着，或站在床上自己抓着围栏玩。房间里的气味很难闻，照顾孩子们的阿姨索性将窗户大开，加强通风。屋子里有几个孩子的排泄物沾满了被褥，吸引了不少苍蝇，而他们正躺在这样的床上熟睡，那些苍蝇一会儿落在被褥上，一会儿落在孩子们的脸上，身上。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -358,7 +179,7 @@
   </div>
  </center>
  <p>
-  维基百科资料说，中央党校通过暗示的方式对蔡霞进行恐吓，暗示她如果继续发言，会受到行政处理，被降低生活待遇。
+  眼前的情景让贝天牧又害怕，又心酸无助。他和妻子跑出屋外，平复心情后又返回屋内。他们轻轻抱起孩子，跟他们说话，给他们换衣服，帮他们擦洗身体，陪他们玩儿。在他们眼里，这些孩子就像是从未有人发现过的宝藏，他们是如此的漂亮、可爱。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -373,9 +194,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   声援李文亮再遭约谈
-  </strong>
+  一年后，贝天牧的妻子坐了50多个小时的火车，从贵阳福利院领养了一个5个月大的残障女孩，起名Esther。现在Esther已经26岁了，正在美国当一名教师。她的人生和许多其他正常人一样，并没有什么不同。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -390,84 +209,7 @@
   </div>
  </center>
  <p>
-  维基百科信息说，蔡霞因不满言论受控，曾萌生退党之意，2019年因不满而旅居美国。2020年初，新冠疫情吹哨人李文亮医生因新冠去世时，在美国的蔡霞签署了要求医护有言论自由的声明，这导致蔡霞再次遭中央党校约谈。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  <strong>
-   批评体制音频曝光后遭党校处分
-  </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  最近蔡霞遭到中央党校处分是因为在6月初，蔡霞20分钟不公开会议讲话音频出现在社媒上。蔡霞在音频中说，中国现在是这样的人在高位上，说明体制已经没有出路。蔡霞批评修宪取消国家主席任期制是违法的，共产党是黑帮老大控制的工具、是政治僵尸，9000万党员是随意使用的奴隶。中国如果换人，外部环境可能会变化。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  维基百科词条说，蔡霞在网络发表这个言论，批评中共为“政治僵尸”、暗指中共中央总书记习近平为“黑老大”，因蔡霞红二代及体制内核心圈学者的身份引发轰动。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  中央党校曾10次给蔡霞打电话，要求她回国“跟组织上谈清楚”。对此，蔡霞表示，没有安全保障她不能回去。中央党校最终公开对她进行处分。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  李鑫先生注意到，百度上搜索蔡霞的资料完全没有显示蔡霞具体到底发表了什么政治观点，导致被处分。
+  1995年，贝天牧的好友菲利普海德因为突发心脏病，在一次去长春看完孩子回北京的火车上去世了。听闻好友噩耗，夫妻俩倍感世事无常，生命短暂，应该及时去做自己想做的事情。他们以好友的名字成立了一家基金会——菲利普海德基金会，专门为残障儿童筹集善款。他们又先后辞去了工作，跑到北京廊坊租下一栋大房子，打算全职收养孩子，照顾孩子。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -483,7 +225,7 @@
  </center>
  <p>
   <strong>
-   四个政治主张
+   给残障孤儿们一个家
   </strong>
  </p>
  <center>
@@ -499,7 +241,7 @@
   </div>
  </center>
  <p>
-  维基百科对蔡霞的解释列举了蔡霞四个政治主张。
+  孤儿院伊始，到处都要用钱。贝天牧不但贴上了自己多年的积蓄，还从身边亲朋好友那里“搜刮”了不少善款。房子改好后的第一天，他们就从天津市福利院领回了6个孩子，加上自己的四个孩子一起，组成了一个拥有10个孩子的大家庭。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -514,7 +256,7 @@
   </div>
  </center>
  <p>
-  一个是蔡霞认为，中国社会对马克思主义有误解，忽视了马克思主义对人全面而自由的发展的重视。
+  除了照顾孩子外，贝天牧最常做的就是开着一辆11人座的金杯车，到处走访周边孤儿院去“捡”孩子。他承诺，愿意免费带走任何孤儿院、福利院里照顾困难的孩子，不想接受的孩子，孩子们所有的开销也由他们一力承担。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -529,7 +271,7 @@
   </div>
  </center>
  <p>
-  第二是她认为全体党员应该是党的主人，党内应有民主，她多次批评中共党内被搞得鸦雀无声。
+  在少数好心开发商的支持下，贝天牧先后低价租借了4栋楼用作孤儿院场地。筹集资金，装修，培训阿姨，照顾孩子……夫妻俩忙得脚不沾地。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -544,7 +286,266 @@
   </div>
  </center>
  <p>
-  第三是她对中国2018年修宪的看法。维基百科资料引述蔡霞在曝光音频中的话来表明她批评中国修宪取消领导人任期制。
+  尽管人手有限，但这里的孩子个个都穿得漂亮整洁，绝没有人们想像中孤儿院孩子们脏乱的模样。这是贝天牧妻子的强烈要求，为此她经常和院里的阿姨们为“该不该节俭”发生“战争”。慢慢地，孤儿院里已经有了60多个孩子，接送孩子的金杯车都多添了好几辆。院里小学堂，医疗诊所，一样都不缺。孩子们在这里可以得到很好的照顾。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  但贝天牧想找个更大的地方，盖一座长长久久，专门属于孩子们的大院子，可以让他们在户外尽情玩耍，给孩子们一个更大的，可以玩耍，锻练的地方。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <strong>
+   惊喜再次从天而降
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  2002年，天津大王古庄镇政府以1块钱的价格把一块33亩土地的使用权给了贝天牧。这片位于北京天津交界的土地，极大地方便了他们送孩子们就医。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  为了筹集盖房资金，他带着60多个孤儿的故事回了美国，他到美国各地去演讲，去参加电视节目，向所有的美国观众介绍这些孩子们的故事。这一次，他筹集了268,000美元，至少可以建两栋房子。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  更大的惊喜还在后头。北京一家建筑设计公司愿意无偿完成整个设计。所有的水泥，屋顶瓦片，涂料，电路和开关，都有好心人愿意无偿捐赠，还有人以批发价卖给他们砖石、砖块……
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  这些善意最终变成4栋青灰色外墙的二层小楼，吊脚屋檐，黄色琉璃瓦顶，极具中国特色。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  在天津武清的大王古庄镇，有一个没有任何招牌的安静院落，唯一的门牌上写着：晋元道26号。这里是一群孤残孩子的家，“牧羊地儿童村”。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  2006年，儿童村落成。贝天牧起名“牧羊地”（Shepherd’s Field Children’village），就是“牧羊场儿童村”。因为这片土地在动工前曾是村民们放羊的地方，他觉得十分有趣。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  这里是家也是一切希望的开始。贝天牧从不愿意用“孤儿院”“福利院”这样字眼称呼这里。在他看来，这里只是一个抚养孤儿的家庭，他希望孩子们在这里能像在一个富有生活情趣的家里一样，快乐生长。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  在一席的演讲上，他说：“每个进来的孩子，脸上都写着被遗弃的模样。但只需要几天，你就能看见他们的眼睛亮了起来。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <strong>
+   儿童村的“Tim爸爸”
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  Philip，贝天牧收养的另一个儿子。他患有先天性的“兔唇”，当贝天牧在一个合作的孤儿院看到他时，他已经奄奄一息。他们把他带回了儿童村，用眼药水滴管一点点喂给他食物。几天后，他开始慢慢恢复活力，会笑，会动，会咿呀说话。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  6个月后，他们治好了他的上颚。Philip也成了贝天牧夫妻俩的第七个孩子。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  在儿童村的80多个孩子里，95%以上都患有不同程度的身体残疾。他们不但需要更为细致的照看，还需要定期进行手术或药物治疗，这是一笔极大的开销，也是贝天牧每年筹款的重点。但对每一个孩子，他的态度都是“不拒绝”“不放弃”。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  6岁的阳阳患有脑积水。刚来的时候，他不能起身，不能吃饭。手术之后，在大家的悉心照顾下，阳阳学会了起身、爬、吃饭、开玩笑。每次当贝天牧告诉阳阳“我爱你”的时候，他都会眼睛轱辘一转，歪着脑袋告诉他，“Tim爸爸，我不爱你。”然后两个人同时大笑。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  是的，他们都喊他“Tim爸爸”。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  在儿童村，孩子们的卧室干净整洁，每个房间都配有暖气和空调。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -563,7 +564,7 @@
   </ins>
  </center>
  <p>
-  “从修宪开始，我们可以看到这个党事实上已经是政治僵尸，明摆着修宪从党内程序上它就是不合法的，绑架了十八届三中全会，在三中全会前的两天抢着抛出取消任期制的说法，迫使三中全会像咽狗屎一样咽下去，三中全会那么多中央委员，居然没有一个人敢在三中全会上把这个问题提出来，所以这个党本身已经是一个政治僵尸。”
+  经过专人培训的阿姨们，是孩子们各自专属的“妈妈”。这里共有67名阿姨专职照看着80多名孩子。一些年纪小或完全无法动弹的孩子，则有护工阿姨全天候照看。所有的阿姨分为“白班”和“夜班”两组，她们白天给孩子们喂饭、看护，晚上给孩子们洗澡、洗衣服，记录他们的睡眠生活情况。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -578,7 +579,7 @@
   </div>
  </center>
  <p>
-  第四是蔡霞反对在香港实施国安法，说它一个非常糟糕的决定。蔡霞认为，强行推行港版《国安法》，毁掉的是法治和自由的秩序。
+  每次有孩子被领养，阿姨们都会偷偷抹眼泪，她们又高兴又不舍。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -593,9 +594,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   海外报道被屏蔽
-  </strong>
+  儿童村培养孩子们独立工作，走向社会的能力
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -610,7 +609,7 @@
   </div>
  </center>
  <p>
-  维基百科对蔡霞的解释附录了今年６月以来美国《纽约时报》、自由亚洲电台等海外媒体对蔡霞的１０篇采访报道的链接，并摘录部分内容表明蔡霞对一些问题的看法。
+  儿童村给了这些被遗弃的残障孤儿一个温暖的家。但贝天牧想给他们的，并不止这些。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -625,11 +624,7 @@
   </div>
  </center>
  <p>
-  比如8月23日蔡霞接受美国有限电视新闻网采访表示，支持美国对
-  <span href="https://www.secretchina.com/news/gb/tag/华为" target="_blank">
-   华为
-  </span>
-  实施禁令，支持美国制裁中共官员，希望国际社会阻止中共渗透国际组织。
+  儿童村里建有自己的学堂，老师们会根据孩子的情况调整课程内容。他们教孩子们常规的汉字、英语、数学，也教他们怎么做饭，怎么坐公交，怎么去超市购物……
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -644,7 +639,7 @@
   </div>
  </center>
  <p>
-  这些报道内容都被中国网站屏蔽封锁。
+  每个孩子，能自己动手的地方，旁人绝不插手。除了身体状况比较差的孩子，其他孩子都是自己到食堂打饭，自己洗碗，然后放回消毒柜里。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -659,7 +654,7 @@
   </div>
  </center>
  <p>
-  百度上附录的参考文献链接只有两个，一个是新浪网2010年转载羊城晚报文章，采访蔡霞谈当时刚刚去世的北京自由派宪政学者蔡定剑，这篇文章可以显示蔡霞属于推崇宪政法治的自由派学者。另一个就是中央党校网站通报开除蔡霞党籍、取消退休待遇的报道。
+  这还不够。贝天牧也开始筹划在儿童村里建一个职业教育中心，培养孩子们独立工作，走向社会的能力。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -674,9 +669,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   百度没有提的蔡霞学术获奖情况
-  </strong>
+  因为根据法律规定，满14周岁的孤儿将不能被领养。一般情况下，身体健康的孩子会在孤儿院的帮助下进入社会。但残障儿童，只能在社会福利机构里度过余生。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -691,7 +684,7 @@
   </div>
  </center>
  <p>
-  维基百科提到，蔡霞发表过２个专著和４个代表性学术论文，包括《全球化与中国共产党人价值观》，以及今年７月发表的《因言获罪株连九族必须终止--为任志强再辩》。
+  “我想给这类孩子一个新选择。教给他们生存技能和怎样照顾自己。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -706,7 +699,7 @@
   </div>
  </center>
  <p>
-  蔡霞2篇论文获两项中国全国一等奖，还有蔡霞本人教学工作也获得过中央党校优秀教学奖等荣誉。
+  在儿童村的花园里，有一片印满手印的墙，它被称为“希望之手”，上面记录了每一个被领养孩子的名字和手印，像一个关于孤儿的纪念碑，也记录着他们新生的时刻。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -721,9 +714,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   人民网理论频道蔡霞专栏遭封杀
-  </strong>
+  “我想让这些孩子们记住他们来自哪里，即使今后他们和新的家庭生活在国外，说着不同的语言。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -738,7 +729,7 @@
   </div>
  </center>
  <p>
-  维基百科给出了中国官方的人民网理论频道的蔡霞学术专栏，内容存盘为今年６月份，现在点击页面不存在，显示遭到封杀。
+  收养家庭寄来的照片，他们也一一张贴在大厅里，成了一面特殊的“照片墙”。照片上的每个孩子，都笑得十分灿烂。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -753,7 +744,7 @@
   </div>
  </center>
  <p>
-  另外，南方人物周刊2018年１月３号发表的文章《蔡霞：党校教授并不神秘》也无法打开，应该是遭到封锁。
+  从1996年到现在，儿童村已经为3000多个伤残孩子做了手术治疗，并为900多个孩子找到永久的收养家庭。这都让年近60岁的贝天牧感到十分自豪。他说他想一直留在中国，永远和孩子们在一起，直到生命的终结。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -768,7 +759,7 @@
   </div>
  </center>
  <p>
-  百度百科也称是自由开放平台，是中国企业家李彦宏创办的百度系列平台之一。
+  有人曾问贝天牧，为什么对领养的孩子都能这么好？他说他爱领养的孩子远超过亲生的孩子，因为他们以那样特殊的方式来到我的生命中。“那些孩子给予我的比我给他们的多得多。因为他们改变了我，他们让我心碎，让我看到世间的悲伤和痛苦。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -783,7 +774,7 @@
   </div>
  </center>
  <p>
-  听众朋友，今天的《网络博弈》节目，我们对比了中的百度和海外的维基百科对蔡霞的不同解释。
+  每个来到儿童村的孩子，都有着不同的伤心往事，但在这里，他们的笑容是一样的灿烂，他们的未来也将如这笑容一样，灿烂，光明。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -798,7 +789,22 @@
   </div>
  </center>
  <p>
-  维基百科提供的资料不仅提到蔡霞推崇宪政、自由、法治的政治观点和学术倾向，也说明了蔡霞从2011年开始，就因言论多次遭到中央党校官员谈话、警告、最终８月１７号遭到处分的经过。这些内容在百度上都没有披露。
+  有问题的并不是这些孩子，而是无情放弃他们的父母、亲人。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  希望贝天牧的善良、爱心能治愈孩子身体的病痛，也能治愈人们的冷漠和偏见，更为充满狼性的中国社会，带来一丝暖意。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -831,7 +837,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -863,13 +869,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/944267.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/944267.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/944267.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/08/27/944267.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/951720.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/951720.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/951720.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/07/951720.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p4/944267.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p4/951720.md' width='0px' height='0px'/>
