同步于: 11月7日10时2分

--- a/pages/prog202/a102981054.md
+++ b/pages/prog202/a102981054.md
@@ -1,4 +1,4 @@
-### 【环球直击】10月12日完整版（2）
+### 【全球新闻】11月6日完整版
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,35 +7,34 @@
 
 <div><div class="post_content" itemprop="articleBody">
  <p>
-  【新唐人北京时间2020年10月13日讯】【环球直击】10月12日完整版（2）
-  <br/>
+  【新唐人北京时间2020年11月07日讯】【全球新闻】11月6日完整版
+ </p>
+ <p>
   <strong>
    提要
+   <br/>
   </strong>
-  <br/>
-  【内幕】揭“
-  <ok href="https://www.ntdtv.com/gb/一带一路.htm">
-   一带一路
+  美大选三天后仍无果 共和党议员力挺
+  <ok href="https://www.ntdtv.com/gb/川普.htm">
+   川普
   </ok>
-  ” 吉林部分中巴经济走廊项目遭挫；
   <br/>
-  【独家报导】大纪元揭中共
-  <ok href="https://www.ntdtv.com/gb/南海伤亡演习.htm">
-   南海伤亡演习
+  大选后首次演讲
+  <ok href="https://www.ntdtv.com/gb/川普.htm">
+   川普
   </ok>
-  促美日同盟反制；
+  ：不能因大选舞弊使美国蒙羞
   <br/>
-  美国
-  <ok href="https://www.ntdtv.com/gb/提名大法官.htm">
-   提名大法官
+  前中共海军中校：感谢
+  <ok href="https://www.ntdtv.com/gb/法轮功.htm">
+   法轮功
   </ok>
-  巴雷特国会听证；
+  开发
+  <ok href="https://www.ntdtv.com/gb/翻墙软件.htm">
+   翻墙软件
+  </ok>
   <br/>
-  涉盗窃
-  <ok href="https://www.ntdtv.com/gb/商业机密.htm">
-   商业机密
-  </ok>
-  麻州华人再被控入籍欺诈。
+  疫情下 芬兰圣诞老人村不寻常的圣诞节
  </p>
  <div class="single_ad">
  </div>
@@ -43,13 +42,13 @@
 </div>
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102961733.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102961733.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102961733.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.ntdtv.com/gb/2020/10/12/a102961733.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102981054.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102981054.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102981054.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.ntdtv.com/gb/2020/11/07/a102981054.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/prog202/a102961733.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/prog202/a102981054.md' width='0px' height='0px'/>
