--- a/pages/p8/951774.md
+++ b/pages/p8/951774.md
@@ -1,4 +1,4 @@
-### 做最好的自己(图)
+### 如何帮助情绪找到“出路”？(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align:center">
-  <img alt="人生 攀比 炫耀 修炼" src="https://img3.secretchina.com/pic/2020/7-3/p2724542a341023811-ss.jpg" style="height:337px; width:600px"/>
+ <p style="text-align: center;">
+  <img alt="尤虹文 忧郁症 情绪 脾气" src="https://img2.secretchina.com/pic/2019/6-13/p2445362a609209732-ss.jpg"/>
   <br>
-   做人，做最好的自己，与别人无关。（图片来源：Adobe stock)
+   如何帮助情绪找到“出路”？（图片来源：Adobestock）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,55 +21,49 @@
 
 ---
 
-#### [ 🎬  《红墙的记忆》- 4.25中南海万人和平上访纪实](http://141.164.39.94:10000/videos/legend/425.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  《永恒的五十分钟》（长春电视插播事件改编） ](http://141.164.39.94:10000/videos/news/ComingForYou-2.html)
-
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/) &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html)
-
-#### [ 💥 李锐评习近平：没想到文化程度这么低（李锐是毛泽东秘书、习仲勋挚友、前中组部副部长）](http://141.164.39.94:10000/videos/res/Communist/lirui-xi.html)
-
-#### [ 💥 江泽民失态怒斥并威胁香港记者（ “图样图森破”，“谈笑风生” ）](http://141.164.39.94:10000/videos/res/realjzm/naive.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/人生" target="_blank">
-    人生
-   </span>
-  </strong>
-  是一场孤独的旅行，从始而终，自己的世界里都只是自己一个人，路要自己走，事要自己干，梦是自己做。
+  <span style="font-size:22px">
+   <strong>
+    <span href="https://www.secretchina.com/news/gb/tag/情绪" target="_blank">
+     情绪
+    </span>
+    ，该如何找到出路？忍住情绪比发脾气更可怕
+   </strong>
+  </span>
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  生而为人，每个人都有令人羡慕的事物，也有自己缺憾的东西，没有谁能事事如意，也没有谁活得比谁更容易。
- </p>
- <p>
-  生活中太多的烦恼和困扰，从来不是别人带给你忧虑和痛苦，而是你自己对待生活的态度和心境，如若你想要的太多，就会越烦恼，如若你
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/攀比" target="_blank">
-    攀比
-   </span>
-  </strong>
-  的很厉害，就会越痛苦。
- </p>
- <p>
-  其实，我们要明白，生命是自己的，生活也是自己的，无需证明给别人看，更无需跟别人一较高低，不要把太多的时间，浪费在别人的眼光里，耗费在别人的言语里。
- </p>
- <p>
-  <strong>
-   过好自己的日子，让别人说去吧。
+   你痛苦，是因为你有病，平时一定要情绪养生
   </strong>
  </p>
  <p>
-  人的一生终究会在流言蜚语中度过，谁人背后不说人，谁人背后不被说，所以没必要跟别人解释，更没必要跟别人争吵。
+  <strong>
+   人为什么会心神崩溃散乱？
+  </strong>
+ </p>
+ <p>
+  <strong>
+   人为什么会想要伤害自己？
+  </strong>
+ </p>
+ <p>
+  <strong>
+   你知道负能量聚在哪里吗？
+  </strong>
+ </p>
+ <p>
+  很小的时候，有一次跟弟弟发生争执。我在盛怒下用力打了他，接下来的感觉至今依然记得，我的怒气就像颗气球瞬间消风，太神奇了！这就是情绪养生……并不是。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -84,7 +78,7 @@
   </div>
  </center>
  <p>
-  解释是需要成本的，与其无谓的浪费时间，浪费精力，倒不如专心的去做自己认定的事情，走自己的路，不必浪费自己宝贵的言语和时间。
+  当时不懂事，不知道如何处理怒气（或各种累积心底的情绪），只能很原始的动手动脚。长大之后，情绪升起，很多人选择压抑、麻木。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -99,7 +93,11 @@
   </div>
  </center>
  <p>
-  这世上，每个人都是独一无二的存在，是世间不一样的烟火，哪怕是一瞬的绚烂，也要照亮天空，不必强求谁都懂。
+  甚至有些人，在追求梦想时太过用力，完全忽略身心的感受，身体都以小病痛对你发出“温柔的提醒”，你依然故我拚命三郎般往前冲。
+  <span href="https://www.secretchina.com/news/gb/tag/尤虹文" target="_blank">
+   尤虹文
+  </span>
+  也曾是这样。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -114,7 +112,7 @@
   </div>
  </center>
  <p>
-  做人就像花儿一样，不管有没有人欣赏，我们一定要绽放，不是为别人，而是为自己，不做别人的赏物，只做最绚丽的自己。
+  她十五岁离家，只身赴美念高中，一面精进音乐，一面拚命念书。三年后，她以优异成绩进入哈佛经济系，后来更取得茱莉亚音乐学院大提琴硕士学位。这段经历，她记录在两本书里，鼓舞了不少人： 《为梦想单飞：一个台湾女生上哈佛的成长故事》、《哈佛教我的18堂人生必修课》。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -129,7 +127,7 @@
   </div>
  </center>
  <p>
-  这世上，有些人把你当童话，有些人把你当神话，也有些人把你当笑话，让他们说去吧。
+  刚到美国时，她年纪还小，不懂得照顾身体，为了省钱和抢琴房，她省下学校自助餐厅的费用，每天到学校地下室量贩机，买一块美金的微波汉堡充饥。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -144,7 +142,41 @@
   </div>
  </center>
  <p>
-  真正优秀的人，从来不在乎别人怎么看，只做最优秀的自己，不在别人的身后找自己的影子，不在别人的眼中卑微的找存在感，而是一个人奋斗不止，自带光芒，活出了自我。
+  完美主义让她达到学业、事业的高峰，
+  <span href="https://www.secretchina.com/news/gb/tag/忧郁症" target="_blank">
+   忧郁症
+  </span>
+  却也悄然上身，她仍浑然未觉身体发出的警讯。直到那场改变命运的演出，她才惊觉，在异乡独自卖命冲刺的这些年，完全忽略了承载心灵的身体。光鲜的表象背后，是早已破旧不堪的身心。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  她察觉自己的问题，寻求心理师的帮助。后来更因缘际会接触中医，了解“贵生”（照顾好皮囊）、“情绪养生”的重要性。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  一切病由心起，而我们的心，最容易让情绪迷乱。一旦情绪上升，身体必然会受到负面影响。身体的苦痛又会导致情绪低落，如此恶性循环，永远不得解脱。所以每个人都需要情绪养生。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -160,7 +192,7 @@
  </center>
  <p>
   <strong>
-   人到了一定的年纪，就学会了不争不吵。
+   情绪养生的重点为：
   </strong>
  </p>
  <center>
@@ -176,7 +208,7 @@
   </div>
  </center>
  <p>
-  人生，争来争去，争什么？到最后，哪一样是属于你的，你又可以带走什么？
+  1.每时每刻觉察自己当下的心境。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -191,82 +223,7 @@
   </div>
  </center>
  <p>
-  不争，是你的，不用争，天注定；不是你的，无需争，注定不属于你，何必强求。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  面对蛮不讲理的人，让一让，各自安好，也是保护自己，即便是以理据争，不过是闹了心，扫了兴，最后还是蛮不讲理，甚至对自己的生活造成不良的影响。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  自古老人言：十个讲理的，讲不过一个不讲理的人，所以，何必跟傻瓜论短长呢！有时候，无力的解释会让你发现人与人之间像咫尺天涯般遥远。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  不吵，是懂得守住自己的嘴，保护自己的心，说者无心，听著有意，防止祸从口出，招惹是非。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  有时候，不说，才是最强的声音，是在用沉默抗击，不说的人，用更多的时间去思考，去观察别人，有时间去做事情，做一个清醒的当局者。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  所以，闭嘴，修心，好好爱自己。
+  2.当情绪升起时，不要压抑、不要麻木、不要控制、不要管理，情绪不会让你管或是控制，如同天气一样。接受情绪，让情绪自然流动起来。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -285,7 +242,69 @@
   </ins>
  </center>
  <p>
-  不争的人才是真正的生活赢家，放下了争吵，避开了烦恼，躲过了烂人烂事，得到了自在安然，内心总是祥和的，来时随缘，去时随意。
+  3.察觉情绪背后的真相：是看法，是思维模式，是因缘。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  4.观察身体穴位是否已受到情绪影响，自我治疗或是找医师手法治疗。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  5.重复练习以上四步骤，慢慢学习，做一个没有“看法”的人。这些人内心世界非常稳定，不会有大起大落的情绪，身体也会非常健康。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  现在她知道，若是情绪升起，绝不是忍忍就过得去，让情绪流动，找到对的出口。然后，在追求卓越之前，先爱自己。请记得，人生是享受，不是忍受。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  这段漫长的疗愈之路，尤虹文感恩分享，献给跟她一样，等待回家的你。
+  <br>
+  </br>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -301,11 +320,11 @@
  </center>
  <p>
   <strong>
-   人到了一定的年纪，终将学会不
-   <span href="https://www.secretchina.com/news/gb/tag/炫耀" target="_blank">
-    炫耀
+   本文整理、节录自尤虹文《
+   <span href="https://bookzone.cwgv.com.tw/books/details/BBP445">
+    因为身体记得：告别忧郁症的疗愈之路
    </span>
-   。
+   》一书，文章仅代表作者个人立场和观点。由天下文化授权转载，欲阅读完整作品，欢迎参考原书。
   </strong>
  </p>
  <center>
@@ -320,104 +339,27 @@
    </center>
   </div>
  </center>
- <p>
-  你我皆凡人，不会千日好，得意莫张狂，不管在什么位置都不要得意忘形的炫耀。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  你越是炫耀什么，越会失去什么，锋芒毕露的时候，恰好是别人嫉妒羡慕恨的时候，枪打出头鸟，暗箭难防，小人就是在你最张扬最得意时伤害你，所以要学会低调，不炫耀。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  常言道：人外有人，天外有天。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  做人，切记炫耀，谦虚，会让你飞得更高，低调，会让你走得更远。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  人到了一定年纪，终将学会了不争不吵，不炫耀，心平气和的说话，淡然安静的接受，一笑而过的从容。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  做人，做最好的自己就行，与别人无关，与其争吵不休，不如安静的
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/修炼" target="_blank">
-    修炼
+ <p style="margin-bottom:12px;">
+  <hr style="border-top: 1px dashed  ;" width="100%"/>
+  <br/>
+  【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
+  <span href="/kzgd/subscribe.html" target="_blank">
+   荣誉会员
+  </span>
+  ：每位
+  <span href="/kzgd/subscribe.html" target="_blank">
+   荣誉会员
+  </span>
+  每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
+  <span href="/kzgd/subscribe.html" target="_blank">
+   荣誉会员
+  </span>
+  ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
+  <center>
+   <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
-  </strong>
-  自己；与其解释自己，不如安静的强大自己。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  做自己的王者，与别人无关！
+  </center>
   <center>
    <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
     <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
@@ -432,7 +374,7 @@
   </center>
   <center>
    <div>
-    <div id="txt-mid2-t22-2017" style="display: block;  max-height: 351px;  overflow: hidden;">
+    <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
      <div id="SC-21xx">
      </div>
      <ins class="adsbygoogle" data-ad-client="ca-pub-1276641434651360" data-ad-format="auto" data-ad-slot="4301710469" data-full-width-responsive="true" style="display:block">
@@ -447,13 +389,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/938492.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/938492.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/938492.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/07/07/938492.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/951774.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/951774.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/951774.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/07/951774.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p8/938492.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p8/951774.md' width='0px' height='0px'/>
