同步于: 11月8日0时52分

--- a/pages/soh6/440383.md
+++ b/pages/soh6/440383.md
@@ -47,11 +47,73 @@
   才刚刚开始！”
  </p>
  <p>
-  目前仍在计票的四个关键战场州包括宾夕法尼亚州（20张选举人票）、乔治亚州（16张选举人票）、内华达州（6张选举人票）和北卡罗来纳州（15张选举人票）。威斯康星州和乔治亚州将重新计票。宾夕法尼亚州也将按最高法院法官的最新命令，将逾期选票分离出来，不予计算。
+  目前仍在计票的四个关键战场州包括宾夕法尼亚州（20张选举人票）、乔治亚州（16张选举人票）、内华达州（6张选举人票）和北卡罗来纳州（15张选举人票）。威斯康星州（10张选举人票）和乔治亚州（16张选举人票）将重新计票。宾夕法尼亚州也将按最高法院法官的最新命令，将逾期选票分离出来，不予计算。
  </p>
  <p>
   下面是11月7日（周六）选情后续更新报导：
  </p>
+ <h3>
+  截至周六中午关键战场州最新战况
+ </h3>
+ <p>
+  <strong>
+   宾西法尼亚州：
+  </strong>
+  拜登领先川普0.5个百分点，得票数多出34,458张。根据该州网站，全州还有89,282张选票需要计入，约占所有邮寄选票的3.39％。川普团队已对该州涉嫌选举舞弊提出诉讼。
+ </p>
+ <p>
+  <strong>
+   内华达州
+  </strong>
+  ：拜登领先川普1.8个百分点，得票数多出22,657张。州务卿罗素（Jennifer Russell）告诉CNN，该州仍有124,500张未计选票，其中临时选票为60,000张。川普团队已对该州涉嫌选举舞弊提出诉讼。
+ </p>
+ <p>
+  <strong>
+   乔治亚州：
+  </strong>
+  拜登领先川普0.2个百分点，得票数多出7,248张。该州约有12,770张临时选票尚未完成计票。该州将重新点票。
+ </p>
+ <p>
+  <strong>
+   亚利桑那州：
+  </strong>
+  拜登领先川普0.7个百分点，得票数多出20,573张。州务卿表示，全州还剩下17.3万张选票需要计票，其中包括47,000张临时选票，这些选票要到下周二（11月10日）才能计算在内。川普团队已对该州涉嫌选举舞弊提出诉讼。
+ </p>
+ <p>
+  <strong>
+   北卡罗莱纳州：
+  </strong>
+  川普领先拜登1.4个百分点，比拜登的得票数多出76,479张。
+ </p>
+ <p>
+  <strong>
+   威斯康辛州：
+  </strong>
+  拜登领先川普0.7个百分点，得票数多出20,540张。该州将重新点票。
+ </p>
+ <p>
+  <strong>
+   密歇根州：
+  </strong>
+  拜登领先川普2.7个百分点，得票数多出146,123张。川普团队已对该州涉嫌选举舞弊提出诉讼。
+ </p>
+ <h3>
+  川普团队将在费城举行大型新闻会
+ </h3>
+ <p>
+  <ok href="/term/1203">
+   川普总统
+  </ok>
+  发推文宣布，周六上午11点30分，川普团队会在费城举行大型新闻发布会。
+ </p>
+ <div class="soh-embed">
+  <div class="soh-embed-inner">
+   <div class="iframely-embed" style="max-width: 550px;">
+    <div class="iframely-responsive">
+    </div>
+   </div>
+  </div>
+ </div>
  <h3>
   威州议长指示委员会审查大选过程
  </h3>
@@ -64,11 +126,15 @@
  <p>
   据《福斯新闻》报导，密歇根州共和党主席考克斯（Laura Cox）表示，在该州安特里姆县（Antrim County）发生计票软件错误事件，把共和党的6,000张选票计给了民主党，而在该州的83个县中，有47个县都在使用这款名叫“Dominion”的软件。考克斯敦促这些地区检查是否出现同样错误。
  </p>
+ <div class="AD_Embed__Wrap-sc-1xslmin-0 igMuqX module desktop">
+  <div>
+  </div>
+ </div>
  <p>
   根据目前的数据，拜登在密歇根州以50.6%得票率胜过川普的47.9%，两人的差距为146,123票。因此多家媒体已将密歇根州判断为拜登获胜，拿下该州16张选举人票。但是，川普团队已在该州提起诉讼，所以最终鹿死谁手还未可知。
  </p>
  <p style="line-height:1.38">
-  另据报导，全美至少有30个州在使用“Dominion”软件计票系统，其中包括亚利桑那州、明尼苏达州、密歇根州、威斯康星州、乔治亚州和宾夕法尼亚州等这些关键
+  另据报导，全美至少有30个州在使用Dominion软件计票系统，其中包括亚利桑那州、明尼苏达州、密歇根州、威斯康星州、乔治亚州和宾夕法尼亚州等这些关键
   <ok href="/term/14588">
    摇摆州
   </ok>
