--- a/pages/nsc412/n12532246.md
+++ b/pages/nsc412/n12532246.md
@@ -71,6 +71,21 @@
  </strong>
 </h4>
 <h3>
+ 密西根共和党人：将底特律雇员的据报转交给司法部
+</h3>
+<p>
+ 密歇根州的共和党人表示，他们将一名底特律市雇员的举报转交给了司法部，该雇员声称上司让她更改选票上的日期。
+</p>
+<p>
+ 密歇根州共和党主席劳拉·考克斯（Laura Cox）周五告诉记者，该州的共和党人将这些指控转交给了密歇根州东区的美国检察官办公室。
+</p>
+<p>
+ 据考克斯介绍，这名举报人是底特律市的一名选举工作人员，被派到TCF中心处理有问题的选票。
+</p>
+<p>
+ “一捆没有接收日期的选票被带到这位举报人面前。这些选票不应该立即被清点，因为没有证据表明这些选票是在该州规定的11月3日截止日期前收到的。”考克斯说，11月4日上午，该举报人接到上司的指示，将没有日期的选票，输入电子记录，并在选票上标上11月2日或11月3日作为接收日期。
+</p>
+<h3>
  RNC主席：已经收到数百份违规报告
 </h3>
 <figure class="wp-caption alignnone" id="attachment_12531038" style="width: 600px">
