--- a/pages/soh6/440383.md
+++ b/pages/soh6/440383.md
@@ -1,4 +1,4 @@
-### 【选情更新11/7】多州选举舞弊证据浮现 川普誓言战斗到最后
+### 【选情更新11/7】川普在多州提起诉讼 誓言战斗到最后
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -52,6 +52,41 @@
  <p>
   下面是11月7日（周六）选情后续更新报导：
  </p>
+ <h3>
+  <ok href="/term/1203">
+   川普总统
+  </ok>
+  发声明：拜登无资格在任何州宣布获胜 选举还未结束
+ </h3>
+ <p>
+  中午12点12分，川普战情室发布了
+  <ok href="/term/1203">
+   川普总统
+  </ok>
+  的声明。川普表示，这次选举距离结束还路途遥远。乔.拜登并未被任何州确认为赢家，更不用提那些需要重新计票的州或者正在经历
+  <ok href="/term/237700">
+   法律诉讼
+  </ok>
+  的州了。
+ </p>
+ <p>
+  <ok href="/term/1203">
+   川普总统
+  </ok>
+  强调，总统大选的结果，是要由合法选票来决定的，而并不是由任何新闻媒体来决定。他认为，左派媒体之所以急于预测拜登是赢家，是不希望真相被曝光。他表示，从周一开始，川普竞选团队将启动一系列的
+  <ok href="/term/237700">
+   法律诉讼
+  </ok>
+  ，誓要维护美国的选举法，让真正的赢家入主白宫。
+ </p>
+ <div class="soh-embed">
+  <div class="soh-embed-inner">
+   <div class="iframely-embed" style="max-width: 550px;">
+    <div class="iframely-responsive" style="padding-bottom: 116.0362%;">
+    </div>
+   </div>
+  </div>
+ </div>
  <h3>
   截至周六中午关键战场州最新战况
  </h3>
