--- a/pages/nf4514/n12532246.md
+++ b/pages/nf4514/n12532246.md
@@ -1,4 +1,4 @@
-### 【大选更新11.7】威州议长指示审查大选过程
+### 【大选更新11.7】川普：合法选票决定胜者 非媒体
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -71,6 +71,36 @@
  </strong>
 </h4>
 <h3>
+ 川普：合法选票决定胜者 非媒体
+</h3>
+<p>
+ 民主党总统候选人乔·拜登（Joe Biden）周日（11月7日）宣布，在2020年大选中获胜。但遭到唐纳德·川普（特朗普）（Donald Trump）总统的质疑。
+</p>
+<p>
+ 现年77岁的拜登说，他对“美国人民对我和当选的副总统贺锦丽（Kamala Harris）的信任感到荣幸和自惭。面对前所未有的障碍，有创纪录的美国人投了票。”
+</p>
+<p>
+ 竞选连任的现任总统、共和党人川普在一份声明中做出回应。
+</p>
+<p>
+ “我们都知道为什么乔·拜登急于假扮赢家，为什么他的媒体盟友如此努力地帮助他：他们不希望真相被曝光。”
+</p>
+<p>
+ “一个简单的事实是，这次选举远未结束。”川普在声明中表示。
+</p>
+<p>
+ “拜登尚未被确认是任何一个州的获胜者，更何况在那些最有争议的州，正在被强制性重新计票，或者我的竞选团队正在提起有效的法律诉讼挑战，这些都将是最终谁是获胜者的决定因素。”
+</p>
+<p>
+ 根据AP的大选图表统计，宾州计票99%，还没完成；内华达计票88%；而且宾州、密西根、内华达等都被指控选票作弊，法律诉讼正在进行中。
+</p>
+<p>
+ “在宾州，举例说明，我的合法观察员被拒绝有效进入（票点）去监督计票过程。合法选举决定谁是胜者，而不是新闻媒体决定。”
+</p>
+<p>
+ “从周一开始，竞选团队将开始在法庭上起诉，以确保充分捍卫选举法，并确保合法的获胜者即位。”川普说：“我不会停止奋战，直到美国人民获得诚实的（大选）计票。”
+</p>
+<h3>
  密西根共和党人：将底特律雇员的据报转交给司法部
 </h3>
 <p>
@@ -88,7 +118,7 @@
 <h3>
  RNC主席：已经收到数百份违规报告
 </h3>
-<figure class="wp-caption alignnone" id="attachment_12531038" style="width: 600px">
+<figure class="wp-caption aligncenter" id="attachment_12531038" style="width: 600px">
  <ok href="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229494634.jpg">
   <img alt="" class="size-large wp-image-12531038" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229494634-600x400.jpg"/>
  </ok>
