--- a/pages/p9/951869.md
+++ b/pages/p9/951869.md
@@ -1,4 +1,4 @@
-### 一场川普和马克思之间的竞选(图)
+### 这次大选 美国的两个邻国首脑表态迥异(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align:center">
-  <img alt="28月24日，共和党全国代表大会在北卡罗来纳州夏洛特举行，图为川普在讲话后与人群互动。为期四天的会议主题是“向美国的伟大历程致敬”。" src="https://img3.secretchina.com/pic/2020/8-27/p2763421a576351277-ss.jpg"/>
+ <p style="text-align: center;">
+  <img alt="2020年7月8日，美国总统川普欢迎墨西哥总统洛佩斯·奥夫拉多尔到访白宫。" src="https://img3.secretchina.com/pic/2020/11-8/p2813551a822611458-ss.jpg" style="height:424px; width:600px"/>
   <br>
-   8月24日，共和党全国代表大会在北卡罗来纳州夏洛特举行，图为川普在讲话后与人群互动。为期四天的会议主题是“向美国的伟大历程致敬”。（图片来源：Chris Carlson-Pool/Getty Images）
+   2020年7月8日，美国总统川普欢迎墨西哥总统洛佩斯·奥夫拉多尔到访白宫。（图片来源：NICHOLAS KAMM/AFP via Getty Images）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,59 +21,78 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.51.119:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.51.119:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/)  &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html) &nbsp;|&nbsp; [网门免翻墙](http://158.247.203.241:11000/show.aspx?name=ogHome)
-
-#### 💥 [九评共产党](http://141.164.51.119:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.51.119:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.51.119:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.51.119:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  忧心中国会回到文革时期！前中国黑龙江省鸡西市副市长李传良，真名退出共产党](http://141.164.51.119:10000/videos/news/quit01.html)
-
-#### [ 🔥  走出文化亡国第十集 伪专家和造新闻 － 中共宣传机器愚弄民众的两个“致命暗器”](http://141.164.51.119:10000/videos/news/../res/zcwhwg/index.html)
-
-#### [ 🔥  U-2是引中共開火的餌？習近平對美軍“準備好了”沒理解；蓬佩奧發暗示，或實力回應大批判](http://141.164.51.119:10000/videos/news/wenzhao01.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年8月27日讯】即将到来的
+  【看中国2020年11月8日讯】（看中国记者路克编译）在11月7日，美国多家主流媒体相继公布美国
   <strong>
-   美国
-   <span href="https://www.secretchina.com/news/gb/tag/大选" target="_blank">
-    大选
+   大选
+  </strong>
+  结果，称“拜登胜选”，美国的重要邻国
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/加拿大" target="_blank">
+    加拿大
    </span>
   </strong>
-  ，会是有史以来最重要的一次大选，因为它不仅事关美国走向，也还牵涉整个人类文明。
+  总理特鲁多率先对拜登表示祝贺，之后多个西方国家领导人跟进表态。然而美国另一个重要邻国
+  <strong>
+   墨西哥
+  </strong>
+  总统却暂时不愿表态。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  在人类进入近代社会以后，从1789年的法国大革命开始，一种邪的力量开始登上世界舞台，它否定人类传统，企图切断社会和传统的联系，把人类带上一条不受规范的变异之路。
+  加拿大总理特鲁多通过推特祝贺拜登及哈里斯。他在推文中写道：“祝贺乔・拜登和卡马拉・哈里斯。我们两国是亲密的朋友、伙伴及盟友。我们在世界舞台上拥有独一无二的关系。我真的很期待和你们一起合作，并在这方面取得进展。”
  </p>
  <p>
-  在人类近现代历史上，这种力量得逞之处总是伴随恐怖、屠杀、腐败和毁灭，1949年的“新中国”就是一例。2020年，这种力量在
-  <span href="https://www.secretchina.com/news/gb/tag/美国" target="_blank">
-   美国
+  英国首相约翰逊、法国总统马克龙、德国总理默克尔等也相继发表对拜登的祝贺。然而，据路透社报道，美国的另外一个重要邻国
+  <span href="https://zh.wikipedia.org/zh-hans/%E5%A2%A8%E8%A5%BF%E5%93%A5" target="_blank">
+   墨西哥
   </span>
-  再次跳出来，试图用暴力和仇恨，颠覆传统的自由美国，实现一个“新美国”。
+  总统洛佩斯・奥夫拉多尔（Lopez Obrador）周六表示，在法律问题解决之前，他不会祝贺美国总统大选的获胜者，这显然是为了避免在过渡期间与华盛顿发生摩擦。
  </p>
  <p>
-  2020年是一个关键历史节点，美国
+  <span href="https://www.secretchina.com/news/gb/tag/墨西哥" target="_blank">
+   墨西哥
+  </span>
+  是美国的最大贸易伙伴，每年的双向贸易额超过6,000亿美元，而与北部邻国美国的双边关系对墨西哥来说是最重要的。
+ </p>
+ <p>
+  洛佩斯・奥夫拉多尔在新闻发布会上说：“关于
+  <span href="https://www.secretchina.com/news/gb/tag/美国大选" target="_blank">
+   美国大选
+  </span>
+  ，我们将等到所有法律问题都解决之后。”
+ </p>
+ <p>
+  “我不能祝贺一位候选人或另一位候选人。我要等到选举过程结束。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  美国总统唐纳德・
   <span href="https://www.secretchina.com/news/gb/tag/川普" target="_blank">
    川普
   </span>
-  (特朗普)政府终于认清了中共本质，下定了灭共决心。就在这关键时刻，长期渗透美国的共产主义势力也倾巢而出，把一起个别警察执法过度事件包装成种族歧视，煽动种族仇恨，在全美各地制造暴力事件，造成乱局，来势汹汹。
- </p>
- <p>
-  “黑人的命也是命（BLM）”的组织者们公开承认他们是受过“良好训练”的马克思主义者。
- </p>
- <p>
-  被煽动起来的示威者们在美国各大城市砸毁历史人物雕像，显示出他们对美国历史的仇恨。美国的左派学术精英们近年来加速篡改美国历史，例如《纽约时报》发起的“1619项目”等，他们企图对美国传统抹黑，把美国污蔑成一个罪恶国家。
+  (特朗普)已经提出了一系列法律诉讼，质疑选举结果。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -88,7 +107,7 @@
   </div>
  </center>
  <p>
-  7月4日美国独立日，支持“黑人的命也是命（BLM）”的示威者在美国首都华盛顿DC焚烧美国国旗。8月1日，示威者们在波特兰焚烧美国国旗和圣经。
+  这位墨西哥总统之所以如此谨慎，是因为他在2006年和2012年参加的两次总统选举中也遭遇过选举欺诈，他在2018年第三次竞选中获胜。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -103,7 +122,7 @@
   </div>
  </center>
  <p>
-  美国左派政治人物不但对此视而不见，反而予以支持，并阻挠川普恢复秩序的努力，他们的竞选纲领是要从根本上改变美国。
+  因此，他不愿对美国大选的结果发表评论。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -118,11 +137,7 @@
   </div>
  </center>
  <p>
-  从
-  <span href="https://www.secretchina.com/news/gb/tag/共产主义" target="_blank">
-   共产主义
-  </span>
-  在美国深度渗透，和此次它的全面出击来看，今年美国大选，表面上是川普和拜登之间的竞选，实质上却是川普和马克思之间的竞选。这股力量的如意算盘是，一旦川普败选，那么传统的美国就难以继续存在，马克思将彻底统治世界。
+  洛佩斯・奥布拉多尔在讲话中说，这一决定“在政治上是审慎的”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -137,7 +152,7 @@
   </div>
  </center>
  <p>
-  处境非常不妙的中共也寄希望于美国大选，有评论说，中共近日开始表面上示软，实际上是希望能苦撑待变，等待美国总统大选后拜登上台。
+  他说他与川普和前副总统拜登都有良好的关系，他说他已经认识拜登十年了。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -156,7 +171,7 @@
   </ins>
  </center>
  <p>
-  不过，如果从更大的历史时空看，美国独立革命几乎和法国大革命同期发生，二者一正一反，今天的对抗其实早有布局，美国立国于人类传统道德规范之上，后又长足发展，战胜纳粹，遏制苏联，取得冷战胜利，这一路准备，就是为了这最后的历史使命。
+  他需要与川普保持良好的关系，川普的任期定于1月20日结束。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -171,7 +186,7 @@
   </div>
  </center>
  <p>
-  虽然共产主义大举渗透美国，但是川普4年前出人意料竞选成功，并在遭受前所未有的各方攻击下，还能一步步走到今天，并终于作出灭共决心，这并非偶然，都是在为最后的结局作准备。
+  在川普执政期间，墨西哥不得不应对突如其来的要求，以阻止非法移民，否则将面临贸易关税。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -186,7 +201,7 @@
   </div>
  </center>
  <p>
-  在历史的这一刻，不会出现偶然事件，中共对美国大选换人的希望，必然会落空。马克思共产主义被唾弃、人类在重归正道，已是当前的历史大势。
+  但是，洛佩兹・奥布拉多尔通过接受川普的移民指示，建立了某种互惠互利的不安关系，华盛顿在这种关系中大多避免批评他的经济政策。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -200,7 +215,21 @@
    </center>
   </div>
  </center>
- (文章仅代表作者个人立场和观点)
+ <p>
+  他说：“川普总统一直非常尊重我们。”“我们很感谢他没有干预（墨西哥）。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
  <p style="margin-bottom:12px;">
   <hr style="border-top: 1px dashed  ;" width="100%"/>
   <br/>
@@ -219,7 +248,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -251,13 +280,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/944308.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/944308.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/944308.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/08/27/944308.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/951869.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/951869.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/951869.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/08/951869.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p4/944308.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p9/951869.md' width='0px' height='0px'/>
