同步于: 11月9日1时3分

--- a/pages/nsc412/n12533787.md
+++ b/pages/nsc412/n12533787.md
@@ -5,7 +5,7 @@
 
 
 
-<div><img alt="【大选更新11.8】川普:周一大规模诉讼" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229515202-600x400.jpg"/>
+<div><img alt="【大选更新11.8】川普：周一大规模诉讼" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229515202-600x400.jpg"/>
 <div class="caption">
  11月7日，拜登被媒体封为2020年总统大选获胜者，川普总统在弗吉尼亚打高尔夫球后重返白宫。 (ANDREW CABALLERO-REYNOLDS/AFP via Getty Images)
 </div></div><hr/>
