--- a/pages/nsc412/n12533787.md
+++ b/pages/nsc412/n12533787.md
@@ -44,10 +44,26 @@
  情况的实时更新：
 </h4>
 <h3>
+ 华人选民选择“站在正义的一方”
+</h3>
+<p>
+ 密歇根州华人沈晓玲（音译）、坎贝尔·秋香和赵静，11约7日驱车约一个半小时赶到密歇根州首府兰辛，支持
  <ok href="https://www.epochtimes.com/gb/tag/%E5%B7%9D%E6%99%AE.html">
   川普
  </ok>
- ：这些人是贼
+ 总统起诉选举欺诈，表示她们选择“站在正义的一方”。
+</p>
+<p>
+ 沈晓玲认为川普是站在神的一方，她说“现在的局面让我们非常难过，虽然我们今天来的有点晚，但是我们想表达我们的立场，我们不能站在邪恶的一边。”
+</p>
+<p>
+ 她补充道：“我们现在站在这里，就是为了站在正义的一方，我们希望民主制度继续下去，而不是被这种腐败的政府（民主党）带到另外一条邪恶的路上。”
+</p>
+<p>
+ 坎贝尔·秋香支持川普，她认为川普保守、正直、能捍卫美国的传统价值观。
+</p>
+<h3>
+ 川普：这些人是贼
 </h3>
 <p>
  “我们相信这些人是贼。这些大城市机器非常腐败。 这是一次被盗窃的选举。英国最好的民意调查机构今天早上报导说，这显然是一次被盗窃的选举，无法想像拜登在其中一些州的表现居然超过了奥巴马。重要的事，他们盗窃了他们必需的东西。”
