同步于: 11月9日9时2分

--- a/pages/soh6/440650.md
+++ b/pages/soh6/440650.md
@@ -91,6 +91,28 @@
  <p>
  </p>
  <h3>
+  <ok href="/term/1041">
+   川普
+  </ok>
+  团队和RNC在亚利桑那提诉
+ </h3>
+ <p>
+  <ok href="/term/1041">
+   川普
+  </ok>
+  总统的竞选团队和共和党全国委员会（RNC）周六在亚利桑那州指控马里科帕县（Maricopa）没有计入一些合法投票。
+ </p>
+ <p>
+  <ok href="/term/1041">
+   川普
+  </ok>
+  团队说，由于投票工作人员的错误指令，导致一些现场投票无效。“当机器检测到选票过剩时，投票人员应将错误通知来投票的选民，并给他们机会纠正这一问题。相反，马里科帕县的工作人员按了绿色（继续投票）按钮，并告诉选民按下绿色按钮”。 “结果，这些机器视后面的投票无效。”
+  <ok href="/term/1041">
+   川普
+  </ok>
+  团队说。
+ </p>
+ <h3>
   佐治亚州州务卿说富尔顿县重新计票
  </h3>
  <p>
@@ -140,6 +162,10 @@
  <p>
   格雷厄姆在一份声明中说，他已经有一名宾州的邮政工人的证词，这位名叫霍普金斯（Richard Hopkins）的邮政雇员说，宾州邮政局长威森巴赫（Rob Weisenbach）命令员工拣出11月3日后到局的邮寄选票后，盖上3日到局的邮戳。以计入有效票。
  </p>
+ <div class="AD_Embed__Wrap-sc-1xslmin-0 igMuqX module desktop">
+  <div>
+  </div>
+ </div>
  <p>
   格雷厄姆说：“必须对所有投票违规和不当行为的可信指控进行调查，以确保2020年选举的完整性。”“作为参议院司法委员会主席，所有关于选举不当和行为不检的可信指控将受到认真对待。 ”并“对投票违规或不当行为的可信指控。”进行调查。格雷厄姆说。
  </p>
@@ -148,10 +174,6 @@
    宾州集会抗议大选舞弊 华人：捍卫公平正义
   </strong>
  </p>
- <div class="AD_Embed__Wrap-sc-1xslmin-0 igMuqX module desktop">
-  <div>
-  </div>
- </div>
  <p>
   周六，美国五十个州举行了全国同步集会，
   <ok href="https://www.soundofhope.org/term/3151">
