--- a/pages/soh6/440650.md
+++ b/pages/soh6/440650.md
@@ -91,6 +91,34 @@
  <p>
  </p>
  <h3>
+  前纽约市长朱利安尼：费城民主党机器胆子太大了
+ </h3>
+ <p>
+  <ok href="/term/1041">
+   川普
+  </ok>
+  总统私人律师、前纽约市长朱利安尼周日发推文说：“这只是个例子说明费城民主党机器胆子多大。前重量级冠军乔·弗雷泽（Joe Frazier）在2018年大选中投票。他已死于2011年11月7日！！！威尔·史密斯的祖父在2017年、2018年投了票。他2016年去世。
+ </p>
+ <p>
+  我敢打赌
+  <ok href="/term/3365">
+   拜登
+  </ok>
+  （Biden）主导了这个群体。
+ </p>
+ <p>
+  我们会找出答案的。”
+ </p>
+ <div class="soh-embed">
+  <div class="soh-embed-inner">
+   <div class="iframely-embed" style="max-width: 550px;">
+    <div class="iframely-responsive">
+    </div>
+   </div>
+  </div>
+ </div>
+ <h3>
+  <br/>
   共和党众议员：美国选民不喜欢社会主义
   <ok href="/term/1041">
    川普
