同步于: 11月9日12时2分

--- a/pages/soh6/440650.md
+++ b/pages/soh6/440650.md
@@ -124,6 +124,21 @@
   </div>
  </div>
  <p>
+  <strong>
+   密西根州多县出现计票问题
+  </strong>
+ </p>
+ <p>
+  密歇根州议会共和党议员周六（11月7日）投票，决定传唤该州选举官员的记录，作为调查大选欺诈事件的一部分。
+ </p>
+ <p>
+  尽管民主党人反对，但共和党人发起传唤的动议获得了州众议院监督委员会和参议院监督委员会的批准。
+ </p>
+ <p>
+  议员们将传唤选举事务处的选举相关记录。
+ </p>
+ <p>
+  密州参议院监督委员会主席、共和党籍埃德·麦克布罗姆（Ed McBroom）说，共和党议员这样做是要调查改变选举程序和相关法律的决定，并了解这些改变所产生的影响。
  </p>
  <p>
  </p>
@@ -133,8 +148,7 @@
    川普
   </ok>
   仍有机会取胜
-  <p>
-  </p>
+  <br/>
  </h3>
  <p>
   德州共和党参议员特德·克鲁兹（Ted Cruz）周日表示，
@@ -182,14 +196,13 @@
   </figcaption>
  </figure>
  <h3>
-  <p>
-   <br/>
-   <br/>
-   <ok href="/term/1041">
-    川普
-   </ok>
-   推文：这些人是贼
-  </p>
+  <br/>
+  <br/>
+  <br/>
+  <ok href="/term/1041">
+   川普
+  </ok>
+  推文：这些人是贼
  </h3>
  <p>
   周日上午，
@@ -266,8 +279,7 @@
    川普
   </ok>
   会赢
-  <p>
-  </p>
+  <br/>
  </h3>
  <p>
   俄亥俄州共和党籍联邦众议员乔丹（Jim Jordan）对《周末福克斯与朋友》（Fox＆Friends Weekend）说，尽管选前有人预测选举日出现“蓝潮”（民主党大胜），但是共和党人在众议院席位中赢得多个席位，因为“美国人不喜欢社会主义。
@@ -500,8 +512,6 @@
   </div>
  </div>
  <p>
-  <br/>
-  <br/>
  </p>
  <p>
  </p>
