同步于: 11月10日22时3分

--- a/pages/nsc412/n12538429.md
+++ b/pages/nsc412/n12538429.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【大选更新11.10】彭斯：大选尚未结束" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1228969969-1-600x400.jpg"/>
+<div><img alt="【大选更新11.10】川普：我们会赢" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/TrumpBiden-1200x720-600x400.jpg"/>
 <div class="caption">
- 副总统迈克·彭斯（Mike Pence）周一说，在计算完所有合法选票前，总统大选还没有结束。(Samuel Corum/Getty Images)
+ 川普总统在11月10日早上发推说，“我们正在取得巨大进展， 结果将在下周开始出现。 让美国再次伟大！”(Chris Graythen/Getty Images; Andrew Caballero-Reynolds/AFP via Getty Images)
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
